@@ -18,7 +18,6 @@
     <include package=".browser" />
     <include package=".content" />
     <include package=".portlets" />
-    <include package=".upgrades" />
 
     <include zcml:condition="installed ftw.lawgiver" file="lawgiver.zcml" />
 
@@ -33,6 +32,7 @@
         description=""
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
+    <include package=".upgrades" />
 
     <profilehook:hook
         profile="ftw.billboard:default"
