@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1222</version>
   <dependencies>
     <dependency>profile-ftw.colorbox:default</dependency>
     <dependency>profile-ftw.calendarwidget:default</dependency>
+    <dependency>profile-ftw.upgrade:default</dependency>
   </dependencies>
 </metadata>
