@@ -49,7 +49,7 @@ setup(name='ftw.billboard',
         'ftw.colorbox',
         'ftw.lawgiver',
         'ftw.profilehook',
-        'ftw.upgrade',
+        'ftw.upgrade>=1.14.5',
         'plone.api',
         'plone.app.registry',
         'setuptools',
